Дорабтана карусель брендов

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title>ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
@@ -231,6 +231,11 @@
             <img class="brands__list__item__image" src="./images/brands/bose.png" />
           </li>
         </ul>
+        <div class="brands__nav_buttons">
+          <span class="brands__nav_buttons__left"></span>
+          <span class="brands__nav_buttons__right"></span>
+        </div>
+
       </section>
       <section class="suggestions">
         <div class="suggestions__container">
@@ -250,7 +255,7 @@
                 <li class="suggestions__container__list__item__dots__item"></li>
               </ul>
               <div class="suggestions__container__list__item__text">
-                <span class="suggestions__container__list__item__text__title">Sony DualSense PS5 Controller, «полуночный черный»</span>
+                <a class="suggestions__container__list__item__text__title" href="#">Sony DualSense PS5 Controller, «полуночный черный»</a>
                 <div class="suggestions__container__list__item__text__info">
                   <div class="suggestions__container__list__item__text__info__prices">
                     <span class="suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
@@ -279,7 +284,7 @@
                 <li class="suggestions__container__list__item__dots__item"></li>
               </ul>
               <div class="suggestions__container__list__item__text">
-                <span class="suggestions__container__list__item__text__title">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</span>
+                <a class="suggestions__container__list__item__text__title" href="#">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</a>
                 <div class="suggestions__container__list__item__text__info">
                   <div class="suggestions__container__list__item__text__info__prices">
                     <span class="suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
@@ -308,7 +313,7 @@
                 <li class="suggestions__container__list__item__dots__item"></li>
               </ul>
               <div class="suggestions__container__list__item__text">
-                <span class="suggestions__container__list__item__text__title">LEGO Minifigures Marvel Series 2</span>
+                <a class="suggestions__container__list__item__text__title" href="#">LEGO Minifigures Marvel Series 2</a>
                 <div class="suggestions__container__list__item__text__info">
                   <div class="suggestions__container__list__item__text__info__prices">
                     <span class="suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
@@ -337,7 +342,7 @@
                 <li class="suggestions__container__list__item__dots__item"></li>
               </ul>
               <div class="suggestions__container__list__item__text">
-                <span class="suggestions__container__list__item__text__title">Чехол Apple MagSafe для iPhone 12/12 Pro, кожа, золотисто-коричневый</span>
+                <a class="suggestions__container__list__item__text__title" href="#">Чехол Apple MagSafe для iPhone 12/12 Pro, кожа, золотисто-коричневый</a>
                 <div class="suggestions__container__list__item__text__info">
                   <div class="suggestions__container__list__item__text__info__prices">
                     <span class="suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
@@ -366,7 +371,7 @@
                 <li class="suggestions__container__list__item__dots__item"></li>
               </ul>
               <div class="suggestions__container__list__item__text">
-                <span class="suggestions__container__list__item__text__title">Sony PS-LX310BT</span>
+                <a class="suggestions__container__list__item__text__title" href="#">Sony PS-LX310BT</a>
                 <div class="suggestions__container__list__item__text__info">
                   <div class="suggestions__container__list__item__text__info__prices">
                     <span class="suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
@@ -390,18 +395,22 @@
           <a class="sets__container__item" href="#">
             <span class="sets__container__item__title">Красота</span>
             <img class="sets__container__item__image" src="./images/main-sets/beauty.png" />
+            <img class="sets__container__item__image--hover" src="./images/main-sets/beauty-hover.png" />
           </a>
           <a class="sets__container__item" href="#">
             <span class="sets__container__item__title">Для геймеров</span>
             <img class="sets__container__item__image" src="./images/main-sets/gamers.png" />
+            <img class="sets__container__item__image--hover" src="./images/main-sets/gamers-hover.png" />
           </a>
           <a class="sets__container__item" href="#">
             <span class="sets__container__item__title">Спортсменам</span>
             <img class="sets__container__item__image" src="./images/main-sets/sport.png" />
+            <img class="sets__container__item__image--hover" src="./images/main-sets/sport-hover.png" />
           </a>
           <a class="sets__container__item" href="#">
             <span class="sets__container__item__title">Музыка</span>
             <img class="sets__container__item__image" src="./images/main-sets/music.png" />
+            <img class="sets__container__item__image--hover" src="./images/main-sets/music-hover.png" />
           </a>
         </div>
       </section>
