Доработана карусель Выбор покупателей (включая вложенную листалку картинок товара)

--- a/index.html
+++ b/index.html
@@ -319,7 +319,6 @@
                     <span class="suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
                     <span class="suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
                   </div>
-                  <span class="suggestions__container__list__item__text__info__label">Уценка</span>
                 </div>
               </div>
               <a class="suggestions__container__list__item__add_to_cart" href="#">
@@ -348,7 +347,6 @@
                     <span class="suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
                     <span class="suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
                   </div>
-                  <span class="suggestions__container__list__item__text__info__label">Уценка</span>
                 </div>
               </div>
               <a class="suggestions__container__list__item__add_to_cart" href="#">
@@ -386,7 +384,39 @@
               </a>
               <a class="suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
             </li>
+            <li class="suggestions__container__list__item">
+              <div class="suggestions__container__list__item__images" id="product-slider-5">
+                <a class="suggestions__container__list__item__images__link" href="#">
+                  <img class="suggestions__container__list__item__images__link__image" src="./images/goods/vinil.png" />
+                </a>
+                <a class="suggestions__container__list__item__images__link" href="#">
+                  <img class="suggestions__container__list__item__images__link__image suggestions__container__image" src="./images/goods/good-second.jpg" />
+                </a>
+              </div>
+              <ul class="suggestions__container__list__item__dots" id="product-slider-5-dots">
+                <li class="suggestions__container__list__item__dots__item"></li>
+                <li class="suggestions__container__list__item__dots__item"></li>
+              </ul>
+              <div class="suggestions__container__list__item__text">
+                <a class="suggestions__container__list__item__text__title" href="#">Sony PS-LX310BT</a>
+                <div class="suggestions__container__list__item__text__info">
+                  <div class="suggestions__container__list__item__text__info__prices">
+                    <span class="suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
+                    <span class="suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
+                  </div>
+                </div>
+              </div>
+              <a class="suggestions__container__list__item__add_to_cart" href="#">
+                <span class="suggestions__container__list__item__add_to_cart__text">В корзину</span>
+                <span class="suggestions__container__list__item__add_to_cart__icon"></span>
+              </a>
+              <a class="suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+            </li>
           </ul>
+          <div class="suggestions__container__nav_buttons">
+            <span class="suggestions__container__nav_buttons__left"></span>
+            <span class="suggestions__container__nav_buttons__right"></span>
+          </div>
         </div>
       </section>
       <section class="sets">
