Адаптив для всей страницы кроме блока Выбор покупателей Новые картинки категорий

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             <span class="header__bottom__container__column__button" alt="Каталог">Каталог</span>
           </div>
           <div class="header__bottom__container__column column__center">
-            <a class="header__bottom__container__column__logo" href="/" alt="ТехноЗум"><svg class="header__bottom__container__column__logo__image"><use href="./images/sprite.svg#logo"></use></svg></a>
+            <a class="header__bottom__container__column__logo" href="/" alt="ТехноЗум">
+              <svg class="header__bottom__container__column__logo__image"><use href="./images/sprite.svg#logo"></use></svg>
+            </a>
           </div>
           <div class="header__bottom__container__column column__right">
             <ul class="header__services__list">
@@ -84,6 +86,25 @@
               </li>
             </ul>
           </div>
+        </div>
+      </div>
+      <div class="header__mobile">
+        <div class="header__mobile__item">
+          <span class="header__mobile__item__icon icon--search-white"></span>
+        </div>
+        <div class="header__mobile__item">
+          <span class="header__mobile__item__icon icon--heart-white"></span>
+        </div>
+        <div class="header__mobile__item">
+          <a class="header__mobile__item__logo" href="/" alt="ТехноЗум">
+            <svg class="header__mobile__item__logo__image"><use href="./images/sprite.svg#logo"></use></svg>
+          </a>
+        </div>
+        <div class="header__mobile__item">
+          <span class="header__mobile__item__icon icon--cart-white"></span>
+        </div>
+        <div class="header__mobile__item">
+          <span class="header__mobile__item__icon icon--nav-white"></span>
         </div>
       </div>
     </header>
@@ -125,31 +146,31 @@
           <li class="categories__tiles__item">
             <a class="categories__tiles__item__link" href="#">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/phones.png" alt="Смартфоны и гаджеты" />
-              <span class="categories__tiles__item__link__text">Смартфоны и гаджеты</span>
+              <span class="categories__tiles__item__link__text">Смартфоны и&nbsp;гаджеты</span>
             </a>
           </li>
           <li class="categories__tiles__item">
             <a class="categories__tiles__item__link" href="#">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/pc.png" alt="Компьютеры и ноутбуки" />
-              <span class="categories__tiles__item__link__text">Компьютеры и ноутбуки</span>
+              <span class="categories__tiles__item__link__text">Компьютеры и&nbsp;ноутбуки</span>
             </a>
           </li>
           <li class="categories__tiles__item">
             <a class="categories__tiles__item__link" href="#">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/hobby.png" alt="Развлечения и хобби" />
-              <span class="categories__tiles__item__link__text">Развлечения и хобби</span>
+              <span class="categories__tiles__item__link__text">Развлечения и&nbsp;хобби</span>
             </a>
           </li>
           <li class="categories__tiles__item">
             <a class="categories__tiles__item__link" href="#">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/beauty.png" alt="Красота и здоровье" />
-              <span class="categories__tiles__item__link__text">Красота и здоровье</span>
+              <span class="categories__tiles__item__link__text">Красота и&nbsp;здоровье</span>
             </a>
           </li>
           <li class="categories__tiles__item">
             <a class="categories__tiles__item__link" href="#">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/tv.png" alt="Телевизоры и аксессуары" />
-              <span class="categories__tiles__item__link__text">Телевизоры и аксессуары</span>
+              <span class="categories__tiles__item__link__text">Телевизоры и&nbsp;аксессуары</span>
             </a>
           </li>
           <li class="categories__tiles__item">
@@ -161,13 +182,13 @@
           <li class="categories__tiles__item">
             <a class="categories__tiles__item__link" href="#">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/photo.png" alt="Фото и видео" />
-              <span class="categories__tiles__item__link__text">Фото и видео</span>
+              <span class="categories__tiles__item__link__text">Фото и&nbsp;видео</span>
             </a>
           </li>
           <li class="categories__tiles__item">
             <a class="categories__tiles__item__link" href="#">
               <img class="categories__tiles__item__link__image" src="./images/main-tiles/accessories.png" alt="Аксессуары для смартфонов и гаджетов" />
-              <span class="categories__tiles__item__link__text">Аксессуары для смартфонов и гаджетов</span>
+              <span class="categories__tiles__item__link__text">Аксессуары для&nbsp;смартфонов и&nbsp;гаджетов</span>
             </a>
           </li>
           <li class="categories__tiles__item">
@@ -181,6 +202,7 @@
       <section class="hero">
         <div class="hero__container">
           <img class="hero__container__image" src="./images/heroe.png" />
+          <img class="hero__container__image-mobile" src="./images/heroe_mobile.png" />
         </div>
       </section>
       <section class="brands">
