--- a/index.html
+++ b/index.html
@@ -609,5 +609,6 @@
       </div>
     </footer>
     <script src="./js/custom.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
