--- a/delivery.html
+++ b/delivery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Самовывоз — ТехноЗум.рф</title>
+    <title>Доставка — ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
@@ -107,57 +107,24 @@
             <a class="breadcrumbs__menu__item__link" href="/">Технозум</a>
           </li>
           <li class="breadcrumbs__menu__item breadcrumbs__menu__item--active">
-            Самовывоз
+            Доставка
           </li>
         </ul>
       </section>
       <section class="contacts section wrapper--global">
-        <h1>Санкт-Петербург</h1>
+        <h1>Доставка по Санкт-Петербургу</h1>
         <div class="contacts__conditions">
-          <span class="contacts__conditions__text">Ваш заказ готов к получению в течение 15 минут после подтверждения.</span>
-          <span class="contacts__conditions__accent">Самовывоз бесплатный, оплата наличными.</span>
-        </div>
-        <div class="contacts__info">
-          <span class="contacts__info__item icon--address">ул. 1-ая Советская, д.&nbsp;6, корпус&nbsp;2, оф.&nbsp;208</span>
-          <span class="contacts__info__item icon--metro">Станция метро &laquo;Площадь&nbsp;Восстания&raquo;</span>
-          <span class="contacts__info__item icon--phone change_phone">
-            <a class="contacts__info__item__link" href="tel:+78122431885">+7 812-243-18-85</a>
-          </span>
-          <span class="contacts__info__item icon--email">
-            <a class="contacts__info__item__link" href="mailto:spb@tehroom.ru">spb@tehroom.ru</a>
-          </span>
-          <span class="contacts__info__item icon--days">Понедельник&mdash;воскресенье</span>
-          <span class="contacts__info__item icon--hours">11:00&mdash;20:00</span>
-        </div>
-        <div class="contacts__info__map" id="contacts__info__map"></div>
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95f762cd1b2901d9765805705d3a5c157235081e11f563b4d8b358b06b0ce2bc&amp;width=100%25&amp;height=100%&amp;id=contacts__info__map&amp;lang=ru_RU&amp;scroll=true"></script>
-      </section>
-      <section class="route section wrapper--global">
-        <h2>Как найти пункт выдачи заказов Технозум в Петербурге</h2>
-        <div class="route__details">
-          <div class="route__details__map">
-            <img class="route__details__map__image" src="./images/contacts/pvz-route.jpg" />
-          </div>
-          <div class="route__details__step">
-            <span class="circle_bg--black">1</span> Пройдите между 6 и 8 домами 1-й Советской улицы
-            <img class="route__details__step__image" src="./images/contacts/pvz-step1.jpg" />
-          </div>
-          <div class="route__details__step">
-            <span class="circle_bg--black">2</span> Войдите в БЦ «Искра Фонд»
-            <img class="route__details__step__image" src="./images/contacts/pvz-step2.jpg" />
-          </div>
-          <div class="route__details__step">
-            <span class="circle_bg--black">3</span> Поднимитесь на 2-й этаж, cледуйте за указателями «Технозум»
-            <img class="route__details__step__image" src="./images/contacts/pvz-step3.jpg" />
-          </div>
+          <span class="contacts__conditions__text">Доставим ваш заказ в пределах КАД за 1-2 дня
+            Стоимость: 200₽. Бесплатно при заказе от&nbsp;10&nbsp;000₽. Оплата наличными.</span>
+          <span class="contacts__conditions__accent">Стоимость: 200₽. Бесплатно при заказе от 10 &nbsp;000₽. Оплата наличными.</span>
         </div>
       </section>
-      <section class="delivery_teaser section wrapper--global">
-        <div class="delivery_teaser__banner">
-          <span class="delivery_teaser__banner__heading h2">У нас есть доставка в&nbsp;Санкт-Петербурге!</span>
-          <a class="delivery_teaser__banner__button button button--pink" href="#">Подробнее</a>
+      <section class="pickup_teaser section wrapper--global">
+        <div class="pickup_teaser__banner">
+          <span class="pickup_teaser__banner__heading h2">Бесплатный самовывоз в&nbsp;Санкт-Петербурге</span>
+          <a class="pickup_teaser__banner__button button button--pink" href="#">Подробнее</a>
         </div>
-        <img class="delivery_teaser__courier"  src="./images/delivery/courier.jpg" />
+        <img class="pickup_teaser__packing"  src="./images/delivery/packing.jpg" />
       </section>
       <section class="utp section wrapper--global">
         <div class="utp__container">
