--- a/oferta.html
+++ b/oferta.html
@@ -26,8 +26,8 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__top desktop--block section">
-        <div class="header__top__container wrapper--global">
+      <div class="header__top desktop--block">
+        <div class="header__top__container section wrapper--global">
           <ul class="header__top__container__menu">
             <li class="header__top__container__menu__item">
               <a class="header__top__container__menu__item__link link--grey" href="#" alt="Контакты">Контакты</a>
@@ -55,8 +55,8 @@
           </ul>
         </div>
       </div>
-      <div class="header__bottom desktop--block section">
-        <div class="header__bottom__container wrapper--global">
+      <div class="header__bottom desktop--block">
+        <div class="header__bottom__container section wrapper--global">
           <div class="header__bottom__container__column column__left">
             <span class="header__bottom__container__column__button button button--pink megamenu_button" alt="Каталог">Каталог</span>
           </div>
