--- a/catalogue--level2.html
+++ b/catalogue--level2.html
@@ -161,7 +161,7 @@
             </li>
           </ul>
         </div>
-        <div class="catalogue__filters">
+        <dialog class="catalogue__filters">
           <div class="catalogue__filters__container">
             <div class="catalogue__filters__container__heading">
               <span class="catalogue__filters__container__heading__text">Фильтры</span>
@@ -389,7 +389,7 @@
               <span class="catalogue__filters__container__buttons__clear button button--black">Сбросить</span>
             </div>
           </div>
-        </div>
+        </dialog>
         <div class="catalogue__products">
           <ul class="catalogue__products__list">
             <li class="catalogue__products__list__item">
