Страница Оформление заказа — десктоп версия

--- a/cart.html
+++ b/cart.html
@@ -118,7 +118,7 @@
         <ul class="cart_contents__products">
           <li class="cart_contents__products__item">
             <div class="cart_contents__products__item__left">
-              <img src="../images/cart/cart-product.png" class="cart_contents__products__item__left__image" />
+              <img class="cart_contents__products__item__left__image" src="../images/cart/cart-product.png" />
               <span class="cart_contents__products__item__left__name">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</span>
             </div>
             <div class="cart_contents__products__item__middle">
@@ -139,7 +139,7 @@
           </li>
           <li class="cart_contents__products__item">
             <div class="cart_contents__products__item__left">
-              <img src="../images/cart/cart-product.png" class="cart_contents__products__item__left__image" />
+              <img class="cart_contents__products__item__left__image" src="../images/cart/cart-product.png" />
               <span class="cart_contents__products__item__left__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
             </div>
             <div class="cart_contents__products__item__middle">
@@ -160,7 +160,7 @@
           </li>
           <li class="cart_contents__products__item">
             <div class="cart_contents__products__item__left">
-              <img src="../images/cart/cart-product.png" class="cart_contents__products__item__left__image" />
+              <img class="cart_contents__products__item__left__image" src="../images/cart/cart-product.png" />
               <span class="cart_contents__products__item__left__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
             </div>
             <div class="cart_contents__products__item__middle">
@@ -181,21 +181,21 @@
           </li>
         </ul>
         <div class="cart_contents__summary">
-          <div class="cart_contents__summary__sticky">
-            <div class="cart_contents__summary__sticky__top">
-              <span class="cart_contents__summary__sticky__top__heading">Товары (2) на сумму 1 290 000 ₽</span>
-              <div class="cart_contents__summary__sticky__top__detalization">
-                <span class="cart_contents__summary__sticky__top__detalization__name">Скидка:</span>
-                <span class="cart_contents__summary__sticky__top__detalization__summ">400 000 ₽</span>
+          <div class="cart_contents__summary__container cart_contents__summary--sticky">
+            <div class="cart_contents__summary__container__top">
+              <span class="cart_contents__summary__container__top__heading">Товары (2) на сумму 1 290 000 ₽</span>
+              <div class="cart_contents__summary__container__top__detalization">
+                <span class="cart_contents__summary__container__top__detalization__name">Скидка:</span>
+                <span class="cart_contents__summary__container__top__detalization__summ">400 000 ₽</span>
               </div>
-              <div class="cart_contents__summary__sticky__top__detalization">
-                <span class="cart_contents__summary__sticky__top__detalization__name">Скидка:</span>
-                <span class="cart_contents__summary__sticky__top__detalization__summ">400 000 ₽</span>
+              <div class="cart_contents__summary__container__top__detalization">
+                <span class="cart_contents__summary__container__top__detalization__name">Скидка:</span>
+                <span class="cart_contents__summary__container__top__detalization__summ">400 000 ₽</span>
               </div>
             </div>
-            <div class="cart_contents__summary__sticky__bottom">
-              <span class="cart_contents__summary__sticky__bottom__heading">Итого: 1 290 000 ₽</span>
-              <span class="cart_contents__summary__sticky__bottom__button button button--pink">Перейти к оформлению</span>
+            <div class="cart_contents__summary__container__bottom">
+              <span class="cart_contents__summary__container__bottom__heading">Итого: 1 290 000 ₽</span>
+              <span class="cart_contents__summary__container__bottom__button button button--pink">Перейти к оформлению</span>
             </div>
           </div>
         </div>
