--- a/order.html
+++ b/order.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Корзина, пустая — ТехноЗум.рф</title>
+    <title>Оформление заказа — ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
@@ -107,95 +107,90 @@
             <a class="breadcrumbs__menu__item__link" href="/">Технозум</a>
           </li>
           <li class="breadcrumbs__menu__item breadcrumbs__menu__item--active">
-            Корзина
+            Оформление заказа
           </li>
         </ul>
       </section>
       <section class="heading section wrapper--global">
-        <h1>Корзина</h1>
+        <h1>Оформление заказа</h1>
       </section>
-      <section class="cart_contents section wrapper--global">
-        <ul class="cart_contents__products">
-          <li class="cart_contents__products__item">
-            <div class="cart_contents__products__item__left">
-              <img src="../images/cart/cart-product.png" class="cart_contents__products__item__left__image" />
-              <span class="cart_contents__products__item__left__name">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</span>
+      <section class="order section wrapper--global">
+        <div class="order__left">
+          <div class="order__left__subheading">
+            Способ получения <span class="order__left__city__select">в Санкт-Петербурге</span>
+          </div>
+          <div class="order__left__delivery">
+            <div class="order__left__delivery__option">
+              <span class="order__left__options__option__heading">Самовывоз &mdash; бесплатно</span>
+              <span class="order__left__options__option__info">Метро Площадь Восстания, ул. 1-я Советская, 6к2</span>
+              <span class="order__left__options__option__select">Подробнее о пункте выдачи</span>
             </div>
-            <div class="cart_contents__products__item__middle">
-              <div class="cart_contents__products__item__middle__count">
-                <span class="cart_contents__products__item__middle__count__minus cart_contents__products__item__icon"></span>
-                <span class="cart_contents__products__item__middle__count__current">3</span>
-                <span class="cart_contents__products__item__middle__count__plus cart_contents__products__item__icon"></span>
+            <div class="order__left__delivery__option">
+              <span class="order__left__options__option__heading">Доставка курьером &mdash; 200&nbsp;₽</span>
+              <span class="order__left__options__option__info">До двери</span>
+              <span class="order__left__options__option__select">Указать адрес доставки</span>
+            </div>
+          </div>
+          <div class="order__left__subheading">Способ оплаты</div>
+          <div class="order__left__payment">
+            <span class="order__left__payment__option order__left__payment__option--active button">Наличными при получении</span>
+            <span class="order__left__payment__option button">Картой онлайн</span>
+          </div>
+          <div class="order__left__promo">
+            <div class="order__left__promo__area">
+              <span class="order__left__promo__area__heading">Промокод</span>
+              <input type="text" class="order__left__promo__area__input order__left__promo__area__input--accepted" value="CASHSPB" />
+            </div>
+            <div class="order__left__promo__area">
+              Вам доступен<br />
+              <b>промокод на скидку 5%</b>
+            </div>
+          </div>
+          <div class="order__left__subheading">Покупатель</div>
+          <div class="order__left__byuer">
+            <input type="text" class="order__left__byuer__input" placeholder="Имя" />
+            <input type="text" class="order__left__byuer__input" placeholder="Телефон" />
+            <input type="text" class="order__left__byuer__input" placeholder="Email" />
+            <textarea class="order__left__byuer__textarea" placeholder="Комментарий к заказу"></textarea>
+          </div>
+        </div>
+        <div class="order__right">
+          <ul class="order__right__products">
+            <li class="order__right__products__item">
+              <img class="order__right__products__item__image" src="../images/cart/cart-product.png" />
+              <span class="order__right__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</span>
+              <div class="order__right__products__item__price">
+                <span class="order__right__products__item__price__total">645 000 ₽</span>
+                <span class="order__right__products__item__price__single">645 000 х 12</span>
               </div>
-              <span class="cart_contents__products__item__middle__price">645 000 x 3</span>
-            </div>
-            <div class="cart_contents__products__item__right">
-              <div class="cart_contents__products__item__right__cost">
-                <span class="cart_contents__products__item__right__cost__current">645 000 ₽</span>
-                <span class="cart_contents__products__item__right__cost__old">645 000 ₽</span>
+            </li>
+            <li class="order__right__products__item">
+              <img class="order__right__products__item__image" src="../images/cart/cart-product.png" />
+              <span class="order__right__products__item__name">Гирлянда Twinkly LED Flex, 2 м, RGB, Wi-Fi</span>
+              <div class="order__right__products__item__price">
+                <span class="order__right__products__item__price__total">645 000 ₽</span>
+                <span class="order__right__products__item__price__single">645 000 х 12</span>
               </div>
-              <span class="cart_contents__products__item__right__delete cart_contents__products__item__icon"></span>
-            </div>
-          </li>
-          <li class="cart_contents__products__item">
-            <div class="cart_contents__products__item__left">
-              <img src="../images/cart/cart-product.png" class="cart_contents__products__item__left__image" />
-              <span class="cart_contents__products__item__left__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
-            </div>
-            <div class="cart_contents__products__item__middle">
-              <div class="cart_contents__products__item__middle__count">
-                <span class="cart_contents__products__item__middle__count__minus cart_contents__products__item__icon"></span>
-                <span class="cart_contents__products__item__middle__count__current">3</span>
-                <span class="cart_contents__products__item__middle__count__plus cart_contents__products__item__icon"></span>
+            </li>
+          </ul>
+          <div class="cart_contents__summary cart_contents__summary--sticky">
+            <div class="cart_contents__summary__container">
+              <div class="cart_contents__summary__container__top">
+                <span class="cart_contents__summary__container__top__heading">Товары (2) на сумму 1 290 000 ₽</span>
+                <div class="cart_contents__summary__container__top__detalization">
+                  <span class="cart_contents__summary__container__top__detalization__name">Скидка:</span>
+                  <span class="cart_contents__summary__container__top__detalization__summ">400 000 ₽</span>
+                </div>
+                <div class="cart_contents__summary__container__top__detalization">
+                  <span class="cart_contents__summary__container__top__detalization__name">Скидка по промокоду:</span>
+                  <span class="cart_contents__summary__container__top__detalization__summ">400 ₽</span>
+                </div>
               </div>
-              <span class="cart_contents__products__item__middle__price">645 000 x 3</span>
-            </div>
-            <div class="cart_contents__products__item__right">
-              <div class="cart_contents__products__item__right__cost">
-                <span class="cart_contents__products__item__right__cost__current">645 000 ₽</span>
-                <span class="cart_contents__products__item__right__cost__old">645 000 ₽</span>
+              <div class="cart_contents__summary__container__bottom">
+                <span class="cart_contents__summary__container__bottom__heading">Итого: 1 290 000 ₽</span>
+                <span class="cart_contents__summary__container__bottom__button button button--pink">Оформить заказ</span>
+                <div class="cart_contents__summary__container__terms">Нажимая на кнопку, вы соглашаетесь с <a href="#">Условиями обработки персональных данных</a>, а также c <a href="#">Условиями публичной оферты</a>.</div>
               </div>
-              <span class="cart_contents__products__item__right__delete cart_contents__products__item__icon"></span>
-            </div>
-          </li>
-          <li class="cart_contents__products__item">
-            <div class="cart_contents__products__item__left">
-              <img src="../images/cart/cart-product.png" class="cart_contents__products__item__left__image" />
-              <span class="cart_contents__products__item__left__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
-            </div>
-            <div class="cart_contents__products__item__middle">
-              <div class="cart_contents__products__item__middle__count">
-                <span class="cart_contents__products__item__middle__count__minus cart_contents__products__item__icon"></span>
-                <span class="cart_contents__products__item__middle__count__current">3</span>
-                <span class="cart_contents__products__item__middle__count__plus cart_contents__products__item__icon"></span>
-              </div>
-              <span class="cart_contents__products__item__middle__price">645 000 x 3</span>
-            </div>
-            <div class="cart_contents__products__item__right">
-              <div class="cart_contents__products__item__right__cost">
-                <span class="cart_contents__products__item__right__cost__current">645 000 ₽</span>
-                <span class="cart_contents__products__item__right__cost__old">645 000 ₽</span>
-              </div>
-              <span class="cart_contents__products__item__right__delete cart_contents__products__item__icon"></span>
-            </div>
-          </li>
-        </ul>
-        <div class="cart_contents__summary">
-          <div class="cart_contents__summary__sticky">
-            <div class="cart_contents__summary__sticky__top">
-              <span class="cart_contents__summary__sticky__top__heading">Товары (2) на сумму 1 290 000 ₽</span>
-              <div class="cart_contents__summary__sticky__top__detalization">
-                <span class="cart_contents__summary__sticky__top__detalization__name">Скидка:</span>
-                <span class="cart_contents__summary__sticky__top__detalization__summ">400 000 ₽</span>
-              </div>
-              <div class="cart_contents__summary__sticky__top__detalization">
-                <span class="cart_contents__summary__sticky__top__detalization__name">Скидка:</span>
-                <span class="cart_contents__summary__sticky__top__detalization__summ">400 000 ₽</span>
-              </div>
-            </div>
-            <div class="cart_contents__summary__sticky__bottom">
-              <span class="cart_contents__summary__sticky__bottom__heading">Итого: 1 290 000 ₽</span>
-              <span class="cart_contents__summary__sticky__bottom__button button button--pink">Перейти к оформлению</span>
             </div>
           </div>
         </div>
