--- a/order-success.html
+++ b/order-success.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Оформление заказа — ТехноЗум.рф</title>
+    <title>Заказ оформлен — ТехноЗум.рф</title>
     <meta name="description" value="DESCRIPTION" />
     
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico"/>
@@ -107,93 +107,132 @@
             <a class="breadcrumbs__menu__item__link" href="/">Технозум</a>
           </li>
           <li class="breadcrumbs__menu__item breadcrumbs__menu__item--active">
-            Оформление заказа
+            Заказ оформлен
           </li>
         </ul>
       </section>
-      <section class="heading section wrapper--global">
-        <h1>Оформление заказа</h1>
+      <section class="success_heading section wrapper--global">
+        <h1>Ваш заказ <span class="success_heading__number">№ S-0508I13UT6776</span> принят</h1>
+        <div class="success_heading__message">Менеджер свяжется с вами для уточнения деталей заказа</div>
+        <img class="success_heading__image" src="../images/clap.svg" />
       </section>
-      <section class="order section wrapper--global">
-        <div class="order__left">
-          <div class="order__left__subheading">
-            Способ получения <span class="order__left__city__select">в Санкт-Петербурге</span>
+      <section class="success_order_info section wrapper--global">
+        <div class="success_order_info__main">
+          <span class="success_order_info__main__number">№ S-0508I13UT6776</span>
+          <span class="success_order_info__main__date">от 27.06.2022</span>
+          <span class="success_order_info__main__status">В обработке</span>
+        </div>
+        <div class="success_order_info__summary">
+          <div class="success_order_info__summary__delivery">
+            <span class="success_order_info__summary__delivery__heading success_order_info__summary__heading">Доставка:</span>
+            <ul class="success_order_info__summary__delivery__info">
+              <li class="success_order_info__summary__delivery__info__item">
+                <span class="success_order_info__summary__delivery__info__item__name">Город</span>
+                <span class="success_order_info__summary__delivery__info__item__dots"></span>
+                <span class="success_order_info__summary__delivery__info__item__value">Санкт-Петербург</span>
+              </li>
+              <li class="success_order_info__summary__delivery__info__item">
+                <span class="success_order_info__summary__delivery__info__item__name">Адрес</span>
+                <span class="success_order_info__summary__delivery__info__item__dots"></span>
+                <span class="success_order_info__summary__delivery__info__item__value">ул. 1-ая Советская, д.6,
+                  корпус 2, оф. 208</span>
+              </li>
+              <li class="success_order_info__summary__delivery__info__item">
+                <span class="success_order_info__summary__delivery__info__item__name">Комментарий</span>
+                <span class="success_order_info__summary__delivery__info__item__dots"></span>
+                <span class="success_order_info__summary__delivery__info__item__value">Комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий комментарий</span>
+              </li>
+            </ul>
           </div>
-          <div class="order__left__delivery">
-            <div class="order__left__delivery__option">
-              <span class="order__left__options__option__heading">Самовывоз &mdash; бесплатно</span>
-              <span class="order__left__options__option__info">Метро Площадь Восстания, ул. 1-я Советская, 6к2</span>
-              <span class="order__left__options__option__select">Подробнее о пункте выдачи</span>
-            </div>
-            <div class="order__left__delivery__option">
-              <span class="order__left__options__option__heading">Доставка курьером &mdash; 200&nbsp;₽</span>
-              <span class="order__left__options__option__info">До двери</span>
-              <span class="order__left__options__option__select">Указать адрес доставки</span>
-            </div>
+          <div class="success_order_info__summary__payment">
+            <span class="success_order_info__summary__payment__heading success_order_info__summary__heading">Оплата:</span>
+            <ul class="success_order_info__summary__payment__info">
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Способ</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">Картой онлайн</span>
+              </li>
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Статус</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">Оплачен</span>
+              </li>
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Стоимость заказа</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">645 000 ₽</span>
+              </li>
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Стоимость доставки</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">Бесплатно</span>
+              </li>
+              <li class="success_order_info__summary__payment__info__item">
+                <span class="success_order_info__summary__payment__info__item__name">Итого</span>
+                <span class="success_order_info__summary__payment__info__item__dots"></span>
+                <span class="success_order_info__summary__payment__info__item__value">645 000 ₽</span>
+              </li>
+            </ul>
           </div>
-          <div class="order__left__subheading">Способ оплаты</div>
-          <div class="order__left__payment">
-            <span class="order__left__payment__option order__left__payment__option--active button">Наличными при получении</span>
-            <span class="order__left__payment__option button">Картой онлайн</span>
-          </div>
-          <div class="order__left__promo">
-            <div class="order__left__promo__area">
-              <span class="order__left__promo__area__heading">Промокод</span>
-              <input type="text" class="order__left__promo__area__input order__left__promo__area__input--accepted" value="CASHSPB" />
-            </div>
-            <div class="order__left__promo__area">
-              Вам доступен<br />
-              <b>промокод на скидку 5%</b>
-            </div>
-          </div>
-          <div class="order__left__subheading">Покупатель</div>
-          <div class="order__left__buyer">
-            <input type="text" class="order__left__buyer__input" placeholder="Имя" />
-            <input type="text" class="order__left__buyer__input" placeholder="Телефон" />
-            <input type="text" class="order__left__buyer__input" placeholder="Email" />
-            <textarea class="order__left__buyer__textarea" placeholder="Комментарий к заказу"></textarea>
+          <div class="success_order_info__summary__buyer">
+            <span class="success_order_info__summary__buyer__heading success_order_info__summary__heading">Получатель:</span>
+            <ul class="success_order_info__summary__buyer__info">
+              <li class="success_order_info__summary__buyer__info__item">
+                <span class="success_order_info__summary__buyer__info__item__name">Имя</span>
+                <span class="success_order_info__summary__buyer__info__item__dots"></span>
+                <span class="success_order_info__summary__buyer__info__item__value">Юрий</span>
+              </li>
+              <li class="success_order_info__summary__buyer__info__item">
+                <span class="success_order_info__summary__buyer__info__item__name">Телефон</span>
+                <span class="success_order_info__summary__buyer__info__item__dots"></span>
+                <span class="success_order_info__summary__buyer__info__item__value">+ 7 (999) 990-99-99</span>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="order__right">
-          <ul class="order__right__products">
-            <li class="order__right__products__item">
-              <img class="order__right__products__item__image" src="../images/cart/cart-product.png" />
-              <span class="order__right__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</span>
-              <div class="order__right__products__item__price">
-                <span class="order__right__products__item__price__total">645 000 ₽</span>
-                <span class="order__right__products__item__price__single">645 000 х 12</span>
-              </div>
-            </li>
-            <li class="order__right__products__item">
-              <img class="order__right__products__item__image" src="../images/cart/cart-product.png" />
-              <span class="order__right__products__item__name">Гирлянда Twinkly LED Flex, 2 м, RGB, Wi-Fi</span>
-              <div class="order__right__products__item__price">
-                <span class="order__right__products__item__price__total">645 000 ₽</span>
-                <span class="order__right__products__item__price__single">645 000 х 12</span>
-              </div>
-            </li>
-          </ul>
-          <div class="cart_contents__summary cart_contents__summary--sticky">
-            <div class="cart_contents__summary__container">
-              <div class="cart_contents__summary__container__top">
-                <span class="cart_contents__summary__container__top__heading">Товары (2) на сумму 1 290 000 ₽</span>
-                <div class="cart_contents__summary__container__top__detalization">
-                  <span class="cart_contents__summary__container__top__detalization__name">Скидка:</span>
-                  <span class="cart_contents__summary__container__top__detalization__summ">400 000 ₽</span>
-                </div>
-                <div class="cart_contents__summary__container__top__detalization">
-                  <span class="cart_contents__summary__container__top__detalization__name">Скидка по промокоду:</span>
-                  <span class="cart_contents__summary__container__top__detalization__summ">400 ₽</span>
-                </div>
-              </div>
-              <div class="cart_contents__summary__container__bottom">
-                <span class="cart_contents__summary__container__bottom__heading">Итого: 1 290 000 ₽</span>
-                <span class="cart_contents__summary__container__bottom__button button button--pink">Оформить заказ</span>
-                <div class="cart_contents__summary__container__terms">Нажимая на кнопку, вы соглашаетесь с <a href="#">Условиями обработки персональных данных</a>, а также c <a href="#">Условиями публичной оферты</a>.</div>
-              </div>
+      </section>
+      <section class="success_order_contents section wrapper--global">
+        <ul class="success_order_contents__products">
+          <li class="success_order_contents__products__item">
+            <img class="success_order_contents__products__item__image" src="../images/cart/cart-product.png" />
+            <span class="success_order_contents__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</span>
+            <div class="success_order_contents__products__item__cost">
+              <span class="success_order_contents__products__item__cost__current">645 000 ₽</span>
+              <span class="success_order_contents__products__item__price">645 000 x 3</span>
             </div>
+          </li>
+          <li class="success_order_contents__products__item">
+            <img class="success_order_contents__products__item__image" src="../images/cart/cart-product.png" />
+            <span class="success_order_contents__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
+            <div class="success_order_contents__products__item__cost">
+              <span class="success_order_contents__products__item__cost__current">645 000 ₽</span>
+              <span class="success_order_contents__products__item__price">645 000 x 3</span>
+            </div>
+          </li>
+          <li class="success_order_contents__products__item">
+            <img class="success_order_contents__products__item__image" src="../images/cart/cart-product.png" />
+            <span class="success_order_contents__products__item__name">Умные часы Apple Watch Ultra GPS + Cellular</span>
+            <div class="success_order_contents__products__item__cost">
+              <span class="success_order_contents__products__item__cost__current">645 000 ₽</span>
+              <span class="success_order_contents__products__item__price">645 000 x 3</span>
+            </div>
+          </li>
+        </ul>
+        <div class="success_order_contents__summary">
+          <span class="success_order_contents__summary__heading">Товары (2) на сумму 1 290 000 ₽</span>
+          <div class="success_order_contents__summary__detalization">
+            <span class="success_order_contents__summary__detalization__name">Скидка:</span>
+            <span class="success_order_contents__summary__detalization__summ">400 000 ₽</span>
           </div>
+          <div class="success_order_contents__summary__detalization">
+            <span class="success_order_contents__summary__detalization__name">Скидка по промокоду:</span>
+            <span class="success_order_contents__summary__detalization__summ">400 000 ₽</span>
+          </div>
+          <span class="success_order_contents__summary__heading">Итого: 1 290 000 ₽</span>
         </div>
+      </section>
+      <section class="buy_more section wrapper--global">
+        <a class="buy_more__button button button--black" href="/">Купить что-нибудь еще</a>
       </section>
     </main>
     <footer class="footer">
