Страница Заказ успешно оформлен - добавлен блок об отсутствии оплаты

--- a/order-success.html
+++ b/order-success.html
@@ -116,6 +116,10 @@
         <div class="success_heading__message">Менеджер свяжется с вами для уточнения деталей заказа</div>
         <img class="success_heading__image" src="../images/clap.svg" />
       </section>
+      <section class="success_unpaid section wrapper--global">
+        <div class="success_unpaid__message">По каким-то причинам заказ не был оплачен. Оплатите заказ, чтобы мы взяли его в работу.</div>
+        <a class="success_unpaid__button button button--pink" href="#">Оплатить</a>
+      </section>
       <section class="success_order_info section wrapper--global">
         <div class="success_order_info__main">
           <span class="success_order_info__main__number">№ S-0508I13UT6776</span>
