Доставка - мелкие правки

--- a/delivery.html
+++ b/delivery.html
@@ -114,9 +114,8 @@
       <section class="contacts section wrapper--global">
         <h1>Доставка по Санкт-Петербургу</h1>
         <div class="contacts__conditions">
-          <span class="contacts__conditions__text">Доставим ваш заказ в пределах КАД за 1-2 дня
-            Стоимость: 200₽. Бесплатно при заказе от&nbsp;10&nbsp;000₽. Оплата наличными.</span>
-          <span class="contacts__conditions__accent">Стоимость: 200₽. Бесплатно при заказе от 10 &nbsp;000₽. Оплата наличными.</span>
+          <span class="contacts__conditions__text">Доставим ваш заказ в пределах КАД за 1-2 дня</span>
+          <span class="contacts__conditions__accent">Стоимость: 200&nbsp;₽. Бесплатно при заказе от 10&nbsp;000&nbsp;₽. <br />Оплата наличными.</span>
         </div>
       </section>
       <section class="pickup_teaser section wrapper--global">
