Главная - мелкие правки

--- a/index.html
+++ b/index.html
@@ -308,14 +308,13 @@
           <span class="brands__arrows__left arrows--left"></span>
           <span class="brands__arrows__right arrows--right"></span>
         </div>
-
       </section>
       <section class="suggestions">
         <div class="suggestions__container section wrapper--global">
           <span class="suggestions__container__heading section_heading">Выбор покупателей</span>
             <ul class="suggestions__container__list">
               <li class="suggestions__container__list__item">
-                <div class="suggestions__container__list__item__images product-slider" id="product-slider-1">
+                <div class="suggestions__container__list__item__images product-slider">
                   <a class="suggestions__container__list__item__images__link" href="#">
                     <img class="suggestions__container__list__item__images__link__image" src="./images/goods/gamepad.png" />
                   </a>
