--- a/oferta.html
+++ b/oferta.html
@@ -192,8 +192,40 @@
         </ol>
         <p>Доставка за пределы РФ не осуществляется.Срок, стоимость, порядок и иные условия доставки товара согласовываются продавцом и покупателем в веб-интерфейсе, по телефону или электронной почте.Доставка товара от склада продавца до места получения покупателем осуществляется транспортной компанией, которая несёт ответственность за своевременность доставки и отсутствие повреждений товара во время доставки.</p>
         <blockquote>Доставка товара осуществляется за счёт покупателя при помощи услуг, предоставляемых третьими лицами.</blockquote>
-
-
+      </section>
+      <section class="utp section wrapper--global">
+        <div class="utp__container">
+          <div class="utp__container__tile">
+            <img class="utp__container__tile__image" src="./images/utp/original.svg" />
+            <span class="utp__container__tile__heading">Оригинальная продукция</span>
+            <span class="utp__container__tile__text">Продаем только оригинальную продукцию популярных мировых брендов.</span>
+          </div>
+          <div class="utp__container__tile">
+            <img class="utp__container__tile__image" src="./images/utp/doc.svg" />
+            <span class="utp__container__tile__heading">Официальная гарантия</span>
+            <span class="utp__container__tile__text">Соблюдаем закон «О защите прав потребителей», предоставляем все необходимые гарантийные обязательства.</span>
+          </div>
+          <div class="utp__container__tile">
+            <img class="utp__container__tile__image" src="./images/utp/discount.svg" />
+            <span class="utp__container__tile__heading">Низкие цены</span>
+            <span class="utp__container__tile__text">Поддерживаем максимально выгодные предложения.</span>
+          </div>
+          <div class="utp__container__tile">
+            <img class="utp__container__tile__image" src="./images/utp/check.svg" />
+            <span class="utp__container__tile__heading">Контроль качества</span>
+            <span class="utp__container__tile__text">Контролируем качество на каждом этапе: от выбора поставщиков до работы персонала и сервиса.</span>
+          </div>
+          <div class="utp__container__tile">
+            <img class="utp__container__tile__image" src="./images/utp/box.svg" />
+            <span class="utp__container__tile__heading">Самовывоз бесплатно</span>
+            <span class="utp__container__tile__text">Пункт выдачи в центре города. Заказ доступен сразу.</span>
+          </div>
+          <div class="utp__container__tile">
+            <img class="utp__container__tile__image" src="./images/utp/truck.svg" />
+            <span class="utp__container__tile__heading">Быстрая доставка</span>
+            <span class="utp__container__tile__text">Доставим за 1 день.</span>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
